--- a/mobile-apps/ionic/src/assets/i18n/en.json
+++ b/mobile-apps/ionic/src/assets/i18n/en.json
@@ -48,6 +48,7 @@
   "SIGNUP_TITLE": "Sign up",
   "SIGNUP_ERROR": "Unable to create account. Please check your account information and try again.",
   "SIGNUP_BUTTON": "Sign up",
+  "UPDATE_BUTTON": "Update",
 
   "LIST_MASTER_TITLE": "Items",
 
