--- a/mobile-apps/ionic/src/assets/i18n/en.json
+++ b/mobile-apps/ionic/src/assets/i18n/en.json
@@ -8,6 +8,8 @@
   "LOGIN": "Sign in",
   "SIGNUP": "Sign up",
 
+  "TYPE": "Type",
+
   "TAB1_TITLE": "Items",
   "TAB2_TITLE": "Search",
   "TAB3_TITLE": "Settings",
@@ -43,12 +45,16 @@
   "WELCOME_TITLE": "Welcome",
 
   "LOGIN_TITLE": "Sign in",
-  "LOGIN_ERROR": "Unable to sign in. Please check your account information and try again.",
   "LOGIN_BUTTON": "Sign in",
   "SIGNUP_TITLE": "Sign up",
-  "SIGNUP_ERROR": "Unable to create account. Please check your account information and try again.",
   "SIGNUP_BUTTON": "Sign up",
   "UPDATE_BUTTON": "Update",
+
+  "LOGIN_ERROR": "Unable to sign in. Please check your account information and try again.",
+  "SIGNUP_ERROR": "Unable to create account. Please check your account information and try again.",
+  "FETCH_HOME_ERROR": "Unable to fetch home info.",
+  "UPDATE_HOME_ERROR": "Unable to update home info.",
+  "UPDATE_HOME_SUCCESS": "Home info updated.",
 
   "LIST_MASTER_TITLE": "Items",
 
