--- a/mobile-apps/ionic/src/assets/i18n/en.json
+++ b/mobile-apps/ionic/src/assets/i18n/en.json
@@ -49,6 +49,7 @@
   "SIGNUP_TITLE": "Sign up",
   "SIGNUP_BUTTON": "Sign up",
   "UPDATE_BUTTON": "Update",
+  "POST_BUTTON": "Post",
 
   "LOGIN_ERROR": "Unable to sign in. Please check your account information and try again.",
   "SIGNUP_ERROR": "Unable to create account. Please check your account information and try again.",
